adding first component, StorePicker (working in Meteor setup!)

--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Eat Drink Healthy</title>
+  <title>Catch Of The Day</title>
   <link rel="icon" href="/img/favicon.ico">
 </head>
 
